@@ -1,0 +1,42 @@
+2021/21/09
+* Implementar corrida local, es decir que no se requiera conexion para bajar genomas, GFFs y BEDs. Esta porción de codigo deberia sevir de guia:
+
+
+
+#--------------------------------------------------------------------
+# RUN IT
+#--------------------------------------------------------------------
+echo ""
+saythis "STARTING VIRALRECON ${vReconRelease}" "msg"
+echo ""
+
+sudo ${nfBin} run nf-core/viralrecon -r ${vReconRelease} \
+--input ${sampleSheet} \
+--platform nanopore \
+--fasta ${VIGILANTHOME}/viralrecon/GCA_009858895.3_ASM985889v3_genomic.200409.fna.gz \
+--gff ${VIGILANTHOME}/viralrecon/GCA_009858895.3_ASM985889v3_genomic.200409.gff \
+--primer_bed ${VIGILANTHOME}/viralrecon/primer.bed \
+--artic_scheme 'nCoV-2019' \
+--skip_nanoplot \
+--primer_set_version 3 \
+--fastq_dir ${fastqDir} \
+--artic_minion_caller medaka \
+--artic_minion_medaka_model ${medakaModel} \
+-profile docker \
+-c ${customConfig} \
+--sequencing_summary ${sequencingSummary} \
+--outdir ${outDir} \ 
+-resume
+
+
+Acá estan todos los genomas de referencia usados por viralrecon:
+https://github.com/nf-core/configs/blob/master/conf/pipeline/viralrecon/genomes.config
+
+
+
+
+
+*Chequear si el -resume por defecto funciona bien o no.
+* Post-procesamiento: renombrar los archivos  multi_qc para que tengan como prefijo el ID  de la corrida.
+* Capturar estadisticas de corrida. Ej, Librerias de entrada vs. librerias efectivamente analizadas.
+* Copiar todos los resultados a un lugar para su descarga. Se debn copiar los TSVs y los HTMLs de multiqc.
